--- a/Core.Web/Views/MantenedorUsuario/Listado.cshtml
+++ b/Core.Web/Views/MantenedorUsuario/Listado.cshtml
@@ -1,10 +1,4 @@
 ﻿
-@{
- 
-    Layout = null;
- }
-
-
 
 <form id="frm-generico">
     <div class="row">
@@ -16,20 +10,22 @@
                         <tr>
                             <th>Rut</th>
                             <th>Nombre</th>
+                            <th>Email</th>
                             <th>Accion</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var itm in ViewBag.usuariosList)
                         {
-                            <tr>
-                                <td>@itm.Identificador</td>
-                                <td>@itm.Nombres</td>
-                                <td>
-                                    <a href="#" data-id="@itm.Id" class="elimination btn btn-danger btn-sm">Eliminar</a>
-                                    <a href="/configuraciones/usuarios/formulario/@itm.Id" class="edicion btn btn-primary btn-sm">Editar</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>@itm.Identificador</td>
+                            <td>@itm.Nombres</td>
+                            <td>@itm.Email</td>
+                            <td>
+                                <a href="#" data-id="@itm.Id" class="elimination btn btn-danger btn-sm">Eliminar</a>
+                                <a href="/configuraciones/usuarios/formulario/@itm.Id" class="edicion btn btn-primary btn-sm">Editar</a>
+                            </td>
+                        </tr>
 
                         }
 
